--- a/User/css/style.css
+++ b/User/css/style.css
@@ -1071,7 +1071,7 @@ button.submit.check_out{
 	list-style-type: none;
     margin-bottom: 1.5em;
     padding-left: 2em;
-    background: url(../images/img-sp.png) no-repeat -14px -193px;
+    background: url(../upload/img-sp.png) no-repeat -14px -193px;
 }
 .w3_footer_grid ul.w3_footer_grid_list li a{
 	color:#999;
@@ -2178,10 +2178,10 @@ p.animi{
 	overflow: hidden;
 }
 .wmuSlider .wmuSliderWrapper article img {
-	/*--max-width: 100%;
+	max-width: 100%;
 	width: auto;
 	height: auto;
-	display:block;--*/
+	display:block;
 }
 /* Default Skin */
 .wmuSliderPagination {
